fix reclassify